--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+body {
+	background-color: blanchedalmond; 
+}
+
+header {
+	background-color: coral;
+	width: 1200px;
+	height: 370px; 
+}
