--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,26 @@
 @charset "utf-8";
 /* CSS Document */
 
+*{
+	margin: 0px;
+	padding: 0px
+}
+
 body {
 	background-color: blanchedalmond; 
+	padding: 40px; 
 }
 
 header {
 	background-color: coral;
-	width: 1200px;
-	height: 370px; 
+	width: 1300px;
+	height: 340px;  
+	padding: 20px; 
+	border-width: 5px;
+	border-color: chocolate;
+	border-style: solid; 
+}
+
+h1 {
+	font-size: 40px;
 }
