--- a/estilos.css
+++ b/estilos.css
@@ -20,18 +20,28 @@ header {
 	margin: 30px; 
 	border-width: 3px;
 	border-color: chocolate;
-	border-style: solid;  
+	border-style: solid;
+	border-radius: 20px;
+	display: flex; 
+	align-items: center; 
+	justify-content: flex-start; 
+}
+
+div {
+	display: flex;  
+	justify-content: flex-start; 
+	align-items: center; 
 }
 
 h1 {
 	font-size: 50px;
 	font-family: 'El Messiri', "sans-serif"; 
-	color: darkred; 
+	color: darkred;  
 }
 
 h3 {
 	font-size: 25px;
-	font-family: 'Signika Light', "sans-serif"; 
+	font-family: 'Signika Light', "sans-serif";  
 }
 
 h4 {
@@ -48,6 +58,7 @@ p, ul {
 	background-color: floralwhite; 
 	padding: 30px; 
 	margin: 30px; 
+	border-radius: 20px;
 }
 
 a {
