--- a/estilos.css
+++ b/estilos.css
@@ -23,14 +23,12 @@ header {
 	border-style: solid;
 	border-radius: 20px;
 	display: flex; 
-	align-items: center; 
-	justify-content: flex-start; 
+	align-items: center;   
 }
 
 div {
 	display: flex;  
-	justify-content: flex-start; 
-	align-items: center; 
+	flex-direction: column;  
 }
 
 h1 {
@@ -42,6 +40,23 @@ h1 {
 h3 {
 	font-size: 25px;
 	font-family: 'Signika Light', "sans-serif";  
+}
+
+main {
+	display: flex; 
+	flex-direction: row; 
+	align-items: center; 
+}
+
+.columna1 {
+	display: flex;
+	flex-direction: column;
+	
+}
+
+.columna2 {
+	display: flex;
+	flex-direction: column; 
 }
 
 h4 {
