--- a/estilos.css
+++ b/estilos.css
@@ -13,21 +13,22 @@ body {
 	background-color: navajowhite; 
 	padding: 40px;
 	margin: 70px; 
+	display: flex;
+	flex-direction: column;
+	align-items: center; 
 }
 
 header {
-	background-color: goldenrod; 
-	padding: 20px;
-	margin: 30px; 
+	background-color: goldenrod;
+	width: 950px; 
+	padding: 30px;  
 	border-width: 4px;
 	border-color: darkgoldenrod; 
 	border-style: solid; 
-	border-radius: 20px;
+	border-radius: 30px;
 	display: flex; 
 	align-items: center; 
-	justify-content: center; 
-	 
-	
+	justify-content: center; 	
 }
 
 div {
@@ -47,6 +48,7 @@ h3 {
 }
 
 main {
+	margin-top: 30px; 
 	display: flex; 
 	flex-direction: row; 
 	align-items: center; 
@@ -56,7 +58,6 @@ main {
 .columna1 {
 	display: flex;
 	flex-direction: column;
-	
 }
 
 .columna2 {
@@ -67,28 +68,33 @@ main {
 h4 {
 	font-size: 19px; 
 	font-family: 'Signika SemiBold', "sans-serif"; 
+	margin-bottom: 20px; 
 }
 
 p, ul {
 	font-size: 18px; 
-	font-family: Baskerville, "Times New Roman", "serif"
+	font-family: Baskerville, "Times New Roman", "serif"; 	
+}
+
+ul {
+	margin-left: 17px; 
 }
 
 .sec1, .sec2, .sec3 {
 	background-color: burlywood; 
-	padding: 30px; 
-	margin: 30px; 
+	padding: 40px; 
+	margin: 20px; 
 	border-radius: 20px;
-	width: 270px; 
+	width: 290px; 
 }
 
 .sec4, .sec5, .sec6 {
 	background-color: chocolate; 
 	color: white; 
-	padding: 30px; 
-	margin: 30px; 
+	padding: 40px; 
+	margin: 20px; 
 	border-radius: 20px;
-	width: 420px;	
+	width: 450px;	
 }
 
 a {
