--- a/estilos.css
+++ b/estilos.css
@@ -31,10 +31,11 @@ header {
 	justify-content: center; 	
 }
 
+
 div {
 	display: flex;  
 	flex-direction: column; 
-	margin-left: 2%; 
+	margin-left: 4%; 
 }
 
 h1 {
@@ -48,7 +49,7 @@ h3 {
 }
 
 main {
-	margin-top: 30px; 
+	margin-top: 5%; 
 	display: flex; 
 	flex-direction: row; 
 	align-items: center; 
@@ -68,7 +69,7 @@ main {
 h4 {
 	font-size: 19px; 
 	font-family: 'Signika SemiBold', "sans-serif"; 
-	margin-bottom: 20px; 
+	margin-bottom: 5%; 
 }
 
 p, ul {
@@ -77,7 +78,7 @@ p, ul {
 }
 
 ul {
-	margin-left: 17px;
+	margin-left: 6%;
 }
 
 .sec1, .sec2, .sec3 {
@@ -118,7 +119,7 @@ footer {
 	color: #393939; 
 	width: 100%; 
 	padding: 13px;
-	margin-top: 90px;  
+	margin-top: 5%;  
 	border-radius: 8px;
 	display: flex;   
 	justify-content: space-around; 
