--- a/estilos.css
+++ b/estilos.css
@@ -31,6 +31,10 @@ header {
 	justify-content: center; 	
 }
 
+nav {
+	position: sticky;
+	top: 5%; 
+}
 
 div {
 	display: flex;  
@@ -56,8 +60,9 @@ main {
 	display: flex; 
 	flex-direction: row; 
 	align-items: center; 
-	justify-content: center; 
+	justify-content: center;  
 }
+
 
 .columna1 {
 	display: flex;
