--- a/estilos.css
+++ b/estilos.css
@@ -33,7 +33,14 @@ header {
 
 nav {
 	position: sticky;
-	top: 5%; 
+	top: 0%; 
+	display: flex;
+	justify-content: space-around;
+	width: 100%; 
+	padding: 1%;
+	margin-top: 2%;  
+	border-radius: 8px;
+	background-color:olive;  
 }
 
 div {
@@ -126,7 +133,7 @@ footer {
 	font-size: 14px; 
 	color: #393939; 
 	width: 100%; 
-	padding: 1%;
+	padding: 0.5%;
 	margin-top: 5%;  
 	border-radius: 8px;
 	display: flex;   
