--- a/estilos.css
+++ b/estilos.css
@@ -35,12 +35,18 @@ nav {
 	position: sticky;
 	top: 0%; 
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-around; 
 	width: 100%; 
 	padding: 1%;
 	margin-top: 2%;  
-	border-radius: 8px;
-	background-color:olive;  
+	border-radius: 10px;
+	background-color: olive; 
+}
+
+.contacto, .mis-trabajos {
+	font-size: 19px; 
+	font-family: 'Signika SemiBold', "sans-serif";
+	color: white;
 }
 
 div {
