--- a/estilos.css
+++ b/estilos.css
@@ -72,9 +72,8 @@ main {
 	margin-top: 5%;
 	margin-left: 10%;
 	margin-right: 10%;
-	padding: 2%; 
-	display: flex; 
-	flex-direction: row; 
+	padding: 1%; 
+	display: flex;  
 	align-items: center; 
 	justify-content: center;  
 }
@@ -148,3 +147,14 @@ footer {
 	display: flex;   
 	justify-content: space-around; 
 }
+
+
+
+
+
+
+h2 { 
+	font-size: 40px;
+	font-family: 'El Messiri', "sans-serif"; 
+}
+
