--- a/estilos.css
+++ b/estilos.css
@@ -181,8 +181,7 @@ form div {
 	
 }
 
-label {
-	display: block; 
+label { 
 	font-size: 18px; 
 	font-family: Baskerville, "Times New Roman", "serif";
 }
@@ -198,20 +197,20 @@ input {
 }
 
 .items-genero {
-	width: 20%; 
-	margin: 0.5%; 
-	padding: 2%; 
-	display: flex; 
-	flex-direction: column; 
+	width: 100%; 
+	margin: 2%; 
+	padding: 2%;   
 }
 
 .boton-enviar {
 	color: white; 
 	background-color: chocolate; 
-	width: 45%; 
-	height: 5%; 
-	padding: 8%; 
-	margin-top: 30%; 
+	width: 40%; 
+	height: 2%; 
+	padding: 6%; 
+	margin-top: 10%; 
+	font-size: 19px; 
+	font-family: 'Signika SemiBold', "sans-serif";
 }
 
 
