--- a/estilos.css
+++ b/estilos.css
@@ -70,8 +70,7 @@ h3 {
 
 main {
 	margin-top: 5%;
-	margin-left: 10%;
-	margin-right: 10%;
+	width: 70%; 
 	padding: 1%; 
 	display: flex;  
 	align-items: center; 
