--- a/estilos.css
+++ b/estilos.css
@@ -228,7 +228,7 @@ label {
 }
 
 input {
-	border-radius: 8px; 
+	border-radius: 10px; 
 	padding: 6%; 
 	margin: 5%; 
 	width: 100%; 
@@ -252,6 +252,15 @@ input {
 	margin-top: 10%; 
 	font-size: 19px; 
 	font-family: 'Signika SemiBold', "sans-serif";
+}
+
+.boton-enviar:hover {
+	background-color: olive;
+	font-size: 21px;
+	width: 42%; 
+	transform: translateY(-3px);
+	transition-duration: 0.2s;
+	
 }
 
 
