cambio en el nav - todos los html se abren en la misma página

--- a/estilos.css
+++ b/estilos.css
@@ -50,7 +50,7 @@ nav .botonera {
 	width: 45%; 
 }
 
-.boton-contacto, .boton-mis-trabajos {
+.boton-contacto, .boton-mis-trabajos, .boton-inicio {
 	font-size: 19px; 
 	font-family: 'Signika SemiBold', "sans-serif";
 	color: white;
@@ -62,6 +62,15 @@ nav .botonera {
 	border-color: white; 
 	border-style: solid;  
 	width: 100%; 
+}
+
+.boton-inicio:hover {
+	background-color: olivedrab;
+	border-style: outset; 
+	padding: 8px; 
+	border-width: 2px;
+	transform: translateY(-3px);
+	transition-duration: 0.2s;	
 }
 
 .boton-mis-trabajos:hover {
@@ -81,7 +90,11 @@ nav .botonera {
 	transform: translateY(-3px);
 	transition-duration: 0.2s;
 }
-	
+
+.boton-inicio:active {
+	background-color: darkolivegreen;
+	border-style: inset;
+}
 
 .boton-contacto:active {
 	background-color: darkolivegreen;
