--- a/estilos.css
+++ b/estilos.css
@@ -128,6 +128,7 @@ main {
 	padding: 1%; 
 	display: flex;  
 	align-items: center; 
+	justify-content: center; 
 }
 
 
@@ -149,7 +150,7 @@ h4 {
 
 p, ul {
 	font-size: 18px; 
-	font-family: Baskerville, "Times New Roman", "serif";
+	font-family: 'Baskerville', "Times New Roman", "serif";
 }
 
 main ul {
@@ -161,7 +162,7 @@ main ul {
 	padding: 8%; 
 	margin: 5%; 
 	border-radius: 20px;
-	width: 65%; 
+	width: 75%; 
 }
 
 .sec4, .sec5, .sec6 {
@@ -170,7 +171,7 @@ main ul {
 	padding: 10%; 
 	margin: 5%; 
 	border-radius: 20px;
-	width: 350px;	
+	width: 340px;	
 }
 
 li a {
@@ -191,7 +192,7 @@ li a:active {
 
 footer {
 	background-color: darkkhaki; 
-	font-family: Baskerville, "Times New Roman", "serif";
+	font-family: 'Baskerville', "Times New Roman", "serif";
 	font-size: 14px; 
 	color: #393939; 
 	width: 85%; 
@@ -237,7 +238,7 @@ form div {
 
 label { 
 	font-size: 18px; 
-	font-family: Baskerville, "Times New Roman", "serif";
+	font-family: 'Baskerville', "Times New Roman", "serif";
 }
 
 input {
@@ -247,13 +248,22 @@ input {
 	width: 100%; 
 	margin-bottom: 7%; 
 	font-size: 18px; 
-	font-family: Baskerville, "Times New Roman", "serif";
+	font-family: 'Baskerville', "Times New Roman", "serif";
 }
 
 .items-genero {
-	width: 100%; 
+	width: 85%; 
 	margin: 2%; 
-	padding: 2%;   
+	padding: 2%; 
+	display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+}
+
+.items-genero label {
+	padding: 5%; 
 }
 
 .boton-enviar {
