--- a/estilos.css
+++ b/estilos.css
@@ -303,4 +303,13 @@ a img {
 	margin: 4%;
 }
 
+a img:hover {
+	border-style: solid;
+	border-color: chocolate;
+	border-width: 3%; 
+	transform: translateY(-3px);
+	transition-duration: 0.2s;
+}
+
+
 
