--- a/estilos.css
+++ b/estilos.css
@@ -314,14 +314,16 @@ a img:hover {
 
 @media screen and (max-width: 600px) {
 	header {
-	width: 90%; 
-	padding: 3%;  
-	border-width: 6%;
-	border-radius: 30px;
-	display: flex; 
-	align-items: center; 
-	justify-content: center; 	
+	width: 100%; 
 }
+	nav {
+		width: 100%; 
+}
+	nav botonera {
+		width: 70%; 
+	}
+
+	
 
 	
 }
