--- a/estilos.css
+++ b/estilos.css
@@ -314,7 +314,7 @@ a img:hover {
 
 @media screen and (max-width: 600px) {
 	header {
-	width: 100%; 
+	    width: 100%; 
 }
 	nav {
 		width: 100%; 
@@ -322,11 +322,12 @@ a img:hover {
 	nav botonera {
 		width: 70%; 
 	}
-
 	
-
-	
+.galeria {
+	display: flex; 
+	flex-direction: column;
 }
+	}
 
 
 
