--- a/estilos.css
+++ b/estilos.css
@@ -312,7 +312,7 @@ a img:hover {
 	transition-duration: 0.2s;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
 	header {
 	    width: 100%; 
 }
