--- a/estilos.css
+++ b/estilos.css
@@ -312,5 +312,32 @@ a img:hover {
 	transition-duration: 0.2s;
 }
 
+@media screen and (max-width:700px) {
+	
+	header {
+	    width: 100%; 
+	}
+	
+	nav {
+		width: 100%; 
+		flex-direction: column
+	}
+	
+	nav botonera {
+		width: 70%; 
+	}
+	
+	.galeria {
+		flex-direction: column; 
+	}
+ 
+	form {
+		flex-direction: column; 
+	}
+	
+	footer {
+		width: 100%; 
+	}
+}
 
 
